edited the readme

--- a/notebooks/hmm_text.ipynb
+++ b/notebooks/hmm_text.ipynb
@@ -3086,16 +3086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'king and did seat the throne'"
+       "'king and master is hard at hand'"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
